/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Class.java to edit this template
 */
package controllers;


public class Bike extends Vehicles{
    
    public Bike(String id, String matricula, int capacidad) {
        super(id, matricula, capacidad);
    }
    
}
