/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Class.java to edit this template
 */
package controllers;

import controllers.Vehicles;


public class Car extends Vehicles {
    
    public Car(String id, String matricula, int capacidad) {
        super(id, matricula, capacidad);
    }
    
}
