/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Class.java to edit this template
 */
package controllers;


public class ForestalBiomassStore extends Store {
    
    public ForestalBiomassStore(String id, String name, int capacity, int personal) {
        super(id, name, capacity, personal);
    }
    
}
