/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Class.java to edit this template
 */
package controllers;


public class Grocer extends User{

    public Grocer(String username, String id, String password) {
        super(username, id, password);
    }
    
}
