/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Class.java to edit this template
 */
package controllers;


public class ResidualBiomassStore extends Store{
    
    public ResidualBiomassStore(String id, String name, int capacity, int personal) {
        super(id, name, capacity, personal);
    }
    
}
